# handy-backend

./: pyproject.toml
app/: database.py  firebase_init.py  main.py  models.py
app/routers/: admin.py  auth.py  community.py  employee.py  owner.py  public.py
app/schemas/: admin.py  employee.py  login.py  owner.py  public.py  push.py
app/utils/: auth_utils.py  uitls.py
