[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "firebase-admin>=7.1.0",
    "psycopg2>=2.9.11",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
