[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "firebase-admin>=7.1.0",
    "httpx>=0.28.1",
    "passlib[bcrypt]==1.7.4",
    "psycopg2>=2.9.11",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "redis>=7.2.0",
    "solapi>=5.0.3",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
